--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             Noodles Soup!!!Crunchy Noodles Soup!!!Crunchy Noodles Soup!!!Crunchy Noodles Soup!!!Crunchy Noodles
             Soup!!!Crunchy Noodles Soup!!!Crunchy Noodles Soup!!!</marquee>
         <div class="header">
-            <img class="logo" src="./images/indomie-removebg-preview.png" alt="" width="8%">
+            <img class="logo" src="indomie-removebg-preview.png" alt="" width="8%">
             <ul class="wrapper">
                 <li><a href="./home.html" class="">HOME</a></li>
                 <li><a href="./ourmenu.html" class="">OUR MENU</a></li>
@@ -42,9 +42,9 @@
             </div>
         </div>
         <div class="good">
-            <img src="./images/hotdog-removebg-preview.png" alt="" width="15%">
-            <img src="./images/images__2_-removebg-preview.png" alt="" width="25%">
-            <img src="./images/goodie-removebg-preview (1).png" alt="" width="15%">
+            <img src="hotdog-removebg-preview.png" alt="" width="15%">
+            <img src="images__2_-removebg-preview.png" alt="" width="25%">
+            <img src="goodie-removebg-preview (1).png" alt="" width="15%">
         </div>
         <footer>
             &copy;Copyright Noodles.com 2023
